# wallbox-modbus

./: README.md  pyproject.toml  requirements.txt
simulator/: client.py  configuration.json  simulator.py
test/: conftest.py  test_wallbox_modbus.py
wallbox_modbus/: __init__.py  constants.py  wallbox_modbus.py
