[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallbox_modbus"
version = "0.0.1"
authors = [
  { name="Ronald Pijnacker", email="ronald.pijnacker+pypi@gmail.com" },
]
description = "Control your Wallbox Quasar EV charger using Modbus commands"

[tool.setuptools.packages]
find = { include=["wallbox_modbus"] }
